# my-skills

./: .gitignore  AGENTS.md  README.md  skills-lock.json
docs/: conventions.md
docs/superpowers/plans/: 2026-04-08-seoul-metro-realtime.md
docs/superpowers/specs/: 2026-04-08-seoul-metro-realtime-design.md
skills/calver-versioning/: SKILL.md
skills/calver-versioning/agents/: openai.yaml
skills/krds-developer/: SKILL.md
skills/krds-developer/agents/: openai.yaml
skills/krds-developer/references/: component_02_01.md  component_02_02.md  component_02_03.md  component_02_04.md  component_03_01.md  component_03_02.md  component_03_03.md  component_03_04.md  component_03_05.md  component_03_06.md  component_04_01.md  component_04_02.md  component_04_03.md  component_04_04.md  component_04_05.md  component_04_06.md  component_04_07.md  component_04_08.md  component_04_09.md  component_04_10.md  component_04_11.md  component_04_13.md  component_04_14.md  component_05_01.md  component_05_02.md  component_05_03.md  component_06_01.md  component_06_02.md  component_06_03.md  component_06_04.md  component_06_07.md  component_07_01.md  component_07_02.md  component_08_01.md  component_08_02.md  component_08_03.md  component_08_04.md  component_08_05.md  component_08_06.md  component_09_01.md  (+80 more)
skills/pre-push-review/: SKILL.md
skills/seoul-metro-realtime/: SKILL.md  pyproject.toml  task-1-checklist.md
skills/seoul-metro-realtime/scripts/: get_arrivals.py  station_lookup.py
skills/seoul-metro-realtime/tests/: test_arrival_formatting.py  test_station_lookup.py
(+1 files in other folders)
